# app/Http/Controllers/AuthController.php
@@ -2,21 +2,20 @@
 
 namespace App\Http\Controllers;
 
-use App\Services\AuthService;
+use App\Services\AuthServiceInterface;
 use Illuminate\Http\Request;
 
 class AuthController extends Controller
 {
     private $authService;
 
-    public function __construct(AuthService $authService)
+    public function __construct(AuthServiceInterface $authService)
     {
         $this->authService = $authService;
     }
 
     public function login(Request $request)
     {
-        // dd($request);
         $credentials = $request->only('email', 'password');
         $result = $this->authService->authenticate($credentials);
 
